<resources>
    <string name="app_name">MyShot</string>



    <string name="insertEmail">Insert your e-mail</string>
    <string name="insertUsername">Insert your username</string>
    <string name="insertPassword">Insert your password</string>
    <string name="goToRegistration">Not registered yet? Go to Registration</string>
    <string name="goToLogin">Already registered? Go to Log-In</string>
    <string name="login">Log In</string>
    <string name="insertPasswordAgain">Repeat password</string>
    <string name="signup">Sign Up</string>
    <string name="button">Button</string>
    <string name="searchbar">Search</string>
    <string name="insert_description">Insert description</string>
    <string name="insert_title">Insert title</string>
    <string name="pick_image_from_gallery">Pick image from gallery</string>
    <string name="confirm">Confirm</string>
    <string name="your_profile">Your Profile</string>
    <string name="insert_image_details">Insert image details</string>
    <string name="new_photo">New photo</string>
    <string name="sign_in">SIGN IN</string>
</resources>